eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Customer_Service_Observation_Form__c.object
<CustomObject>
    <fields>
        <fullName>Overall_Call_Rating_Sales__c</fullName>
        <label>Overall Call Rating Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unacceptable - ROC required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Call_Rating__c</fullName>
        <inlineHelpText>Scoring of call based upon overall % (i.e.95-100% Outstanding, 85-95% Good, 75-85% Development required, &lt;75% Unacceptable)</inlineHelpText>
        <label>Overall Call Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unacceptable - ROC required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Commentary__c</fullName>
        <inlineHelpText>Commentary on call</inlineHelpText>
        <label>Overall Commentary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Pace_Tone_Pitch__c</fullName>
        <inlineHelpText>Did the consultant adopt an appropriate tone, pace and pitch to suit the customer throughout the whole call</inlineHelpText>
        <label>Overall Pace, Tone &amp; Pitch</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overcome_objections__c</fullName>
        <inlineHelpText>Did the consultant attempt to overcome the customers objection by understanding the customer whilst continuing to display an appropriate style to suit the customer?</inlineHelpText>
        <label>Overcome objections</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Record</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Customer Service Observation Forms</relationshipLabel>
        <relationshipName>Customer_Service_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placing_Customers_on_Hold__c</fullName>
        <inlineHelpText>If the customer is placed on hold is the reason clearly explained and customer returned to every 30 seconds to ask if still o.k. to hold. If appropriate was a customer call back offered?</inlineHelpText>
        <label>Placing Customers on Hold</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Development_Max_3__c</fullName>
        <label>Previous Development (Max 3)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probe_customers_understanding_of_account__c</fullName>
        <inlineHelpText>Did the consultant confirm with the customer that they understood the product including how it works, different whilst mirroring the customers pace of understanding?</inlineHelpText>
        <label>Probe customers understanding of account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Procedural_Knowledge_Points__c</fullName>
        <formula>IF(OR(TEXT( Provide_Accurate_not_misleading_infor__c )=&quot;Yes&quot;, TEXT(Provide_Accurate_not_misleading_infor__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Product_process_Knowledge__c )=&quot;Yes&quot;, TEXT(Product_process_Knowledge__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Technical_Knowledge__c )=&quot;Yes&quot;, TEXT(Technical_Knowledge__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Accurately_Update_Systems__c )=&quot;Yes&quot;, TEXT(Accurately_Update_Systems__c )=&quot;N/A&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process / Procedural Knowledge Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge_F_B_points__c</fullName>
        <formula>IF(OR(TEXT( Explain_product_features_and_benefits__c )=&quot;Yes&quot;, TEXT( Explain_product_features_and_benefits__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Acknowledge_buying_signals__c )=&quot;Yes&quot;, TEXT( Acknowledge_buying_signals__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Probe_customers_understanding_of_account__c )=&quot;Yes&quot;, TEXT( Probe_customers_understanding_of_account__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Overcome_objections__c )=&quot;Yes&quot;, TEXT( Overcome_objections__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Ask_for_business__c )=&quot;Yes&quot;, TEXT( Ask_for_business__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Knowledge (F&amp;B) points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_process_Knowledge__c</fullName>
        <inlineHelpText>Did the consultant confidently portray up to date and accurate product/technical information to the customer</inlineHelpText>
        <label>Process Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provide_Accurate_not_misleading_infor__c</fullName>
        <inlineHelpText>Did the consultant provide accurate process and product information to the customer and was this done in a timely and friendly manner in response to the customer request</inlineHelpText>
        <label>Provide Accurate &amp; not misleading infor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quality_Behaviours__c</fullName>
        <formula>IF(OR(TEXT(   Overall_Pace_Tone_Pitch__c   )=&quot;Yes&quot;, TEXT( Overall_Pace_Tone_Pitch__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Appropriate_use_of_Customer_Name__c )=&quot;Yes&quot;, TEXT( Appropriate_use_of_Customer_Name__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Feedback_provided_to_lead_generator__c )=&quot;Yes&quot;, TEXT( Feedback_provided_to_lead_generator__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality &amp; Behaviours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_and_Behaviours_Points__c</fullName>
        <formula>IF(OR(TEXT(  Customer_name_Active_listening__c  )=&quot;Yes&quot;, TEXT(Customer_name_Active_listening__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Placing_Customers_on_Hold__c  )=&quot;Yes&quot;, TEXT(Placing_Customers_on_Hold__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality and Behaviours Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_calling__c</fullName>
        <inlineHelpText>Did the consultant (establish the customers/inform the customer the) reason for calling (asking open &amp; probing questions/adopting a style to suit the customer) allowing them time to respond?</inlineHelpText>
        <label>Reason for calling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recap_Call__c</fullName>
        <inlineHelpText>Did the consultant recap the call and confirm back the main points covered e.g. what has been agreed, actions whilst mirroring the customers pace?</inlineHelpText>
        <label>Recap Call</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <inlineHelpText>Did the consultant ask the customer for recommendation for friends and family</inlineHelpText>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Call_Type__c</fullName>
        <label>Sales Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>FTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YPSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Day Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact programme Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormancy call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sharia_a_Compliance__c</fullName>
        <inlineHelpText>Did the consultant clearly outline the key features and benefits of the Al Rayan Bank product discussed and our USP of &apos;Sharia Compliant banking? Was this accurate and confidently presented</inlineHelpText>
        <label>Sharia&apos;a Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signpost_Next_Steps__c</fullName>
        <inlineHelpText>Did the consultant signpost the next step of the call so the customer was clear with and further action who and when they would be responded to!</inlineHelpText>
        <label>Signpost Next Steps</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soft_Skills_Service_Excellence_Points__c</fullName>
        <formula>IF(OR(TEXT( Overall_Pace_Tone_Pitch__c )=&quot;Yes&quot;, TEXT(Overall_Pace_Tone_Pitch__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Empathy__c  )=&quot;Yes&quot;, TEXT(Empathy__c )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT(   Courteous_professional__c   )=&quot;Yes&quot;, TEXT(Courteous_professional__c )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT(    Customer_ownership__c    )=&quot;Yes&quot;, TEXT(Customer_ownership__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soft Skills Service Excellence Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soft_Skills_Servive_Excellence_Sales__c</fullName>
        <formula>IF(OR(TEXT(  EmpathySales__c  )=&quot;Yes&quot;, TEXT( EmpathySales__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(  Friendly_helpful__c  )=&quot;Yes&quot;, TEXT( Friendly_helpful__c )=&quot;N/A&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soft Skills &amp; Servive Excellence</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Call_Close__c</fullName>
        <inlineHelpText>Did the consultant during the call close give their name and end the call with the brand? e.g. You&apos;ve been speaking to Mohammed today and thank you for calling Al Rayan Bank</inlineHelpText>
        <label>Standard Call Close</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summarise_needs_and_match__c</fullName>
        <inlineHelpText>Did the consultant propose the ideal product to match the customer needs? Linking it back to the customers requirements</inlineHelpText>
        <label>Summarise needs and match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Question_Gather_all_required_in__c</fullName>
        <inlineHelpText>Did the consultant gather all required information to input on to Salesforce and do this conversationally using a good tone and pace and listen, respond and probe further where applicable whilst asking system questions</inlineHelpText>
        <label>System Question &amp; Gather all required in</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Knowledge__c</fullName>
        <inlineHelpText>In providing a response to the customer would the customer have felt impressed and confident with the knowledge of the consultant</inlineHelpText>
        <label>Technical Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tone_Pace_Clarity__c</fullName>
        <inlineHelpText>Did the consultant confidently and appropriately ask for the business using natural conversational selling techniques?</inlineHelpText>
        <label>Tone, Pace &amp; Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points_Inbound__c</fullName>
        <formula>Open_Call_Verification_Points__c + Soft_Skills_Service_Excellence_Points__c + Process_Procedural_Knowledge_Points__c + Opportunity_Spotting_and_Close_Points__c + Quality_and_Behaviours_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points_Sales__c</fullName>
        <formula>Call_Opening_Points__c + Product_Knowledge_F_B_points__c + Call_Close__c +  Soft_Skills_Servive_Excellence_Sales__c  + EKYC_ANC_Processing__c + Quality_Behaviours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_other__c</fullName>
        <inlineHelpText>Please enter the main purpose of the call if other selected on call type?</inlineHelpText>
        <label>Transaction Type (other)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_monitoring__c</fullName>
        <label>Type of monitoring</label>
        <picklist>
            <picklistValues>
                <fullName>Side by Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Understand_customers_satisfaction_with_c__c</fullName>
        <inlineHelpText>Did the agent probe to understand the customers satisfaction with their current product provider and react with positive example where applicable? (outbound upsell only)</inlineHelpText>
        <label>Understand customers satisfaction with c</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Understand_what_would_make_the_customer__c</fullName>
        <inlineHelpText>Did they use open questions adopting a empathetic approach to identify what would make the customer purchase Al Rayan Bank Products</inlineHelpText>
        <label>Understand what would make the customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Service Observation Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSObservationForm-{000}</displayFormat>
        <label>Customer Service Observation Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Service Observation Forms</pluralLabel>
    <recordTypes>
        <fullName>Inbound</fullName>
        <active>true</active>
        <description>Inbound call coaching</description>
        <label>Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <description>Sales call coaching</description>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>